--- a/abstract-machine/Makefile
+++ b/abstract-machine/Makefile
@@ -97,7 +97,7 @@ LDFLAGS  += -z noexecstack $(addprefix -T, $(LDSCRIPTS))
 
 ### Rule (compile): a single `.c` -> `.o` (gcc)
 $(DST_DIR)/%.o: %.c
-	@mkdir -p $(dir $@) && echo + CC $<
+	@mkdir -p $(dir $@) && echo + CC $< "| CFLAGS: $(CFLAGS) LDFLAGS : $(LDFLAGS)"
 	@$(CC) -std=gnu11 $(CFLAGS) -c -o $@ $(realpath $<)
 
 ### Rule (compile): a single `.cc` -> `.o` (g++)
