--- a/npc/Makefile
+++ b/npc/Makefile
@@ -32,7 +32,7 @@ sim:
     $(CSRCS) $(VSRCS) \
 	$(LIB) $(FLAGS)
  
- IMG ?= /home/zjt/npc-test-ci/ysyx-workbench/am-kernels/tests/cpu-tests/build/dummy-minirv-npc.bin
+ IMG ?= 
 
 run: sim
 	$(EX_CMD) $(ARGS) $(IMG)
@@ -40,18 +40,19 @@ run: sim
 	#rm waveform.vcd
 
 IVL_TOP_MODULE ?= tb
-IVL_SRC_VER = ysyx_25080202.v
+IVL_SRC_VER = /home/cosin/Desktop/ysyx-D-ci/npc/ysyx_25080202.v
 IVL_SRC_TB = $(shell find ./testbench -name "*.v")
 IVL_SRC  = $(IVL_SRC_VER) $(IVL_SRC_TB)
+IVL_SRC_NET = $(NETLIST)  $(CELLS) $(IVL_SRC_TB)
 VVP_FILE   = sim.vvp
 VCD_FILE   = wave.vcd
 IVL_FLAGS  = -g2012 -Wall -Winfloop -DCOSIM_XCHECK  # -g2012启用Verilog 2012标准，-Wall开启警告
 VVP_FLAGS  = -v -n  # -v显示详细仿真日志，-n启用四值仿真严格检查
 IMG_HEX    = test.hex 
-LOAD_ADDR ?= 0x00000000
+LOAD_ADDR ?= 0
 OBJCOPY    = riscv64-linux-gnu-objcopy
 sim-iverilog:
-	@$(OBJCOPY) -I binary -O verilog --adjust-vma=$(LOAD_ADDR) $(IMG) $(IMG_HEX)
+	$(OBJCOPY) -I binary -O verilog --adjust-vma=$(LOAD_ADDR) $(IMG) $(IMG_HEX)
 	@echo "========== 编译Verilog文件（启用四值仿真）=========="
 	@echo $(IVL_SRC)
 	iverilog $(IVL_FLAGS) -s $(IVL_TOP_MODULE) -o $(VVP_FILE) $(IVL_SRC)
@@ -61,7 +62,17 @@ sim-iverilog:
 # 	@echo "仿真完成，生成波形文件：$(VCD_FILE)"
 # 	@echo "========== 打开波形文件 =========="
 # 	gtkwave $(VCD_FILE) 
- 
+sim-iverilog-netlist:
+	@$(OBJCOPY) -I binary -O verilog --adjust-vma=$(LOAD_ADDR) $(IMG) $(IMG_HEX)
+	@echo "========== 编译Verilog文件（启用四值仿真）=========="
+	@echo $(IVL_SRC_NET)
+	iverilog $(IVL_FLAGS) -s $(IVL_TOP_MODULE) -o $(VVP_FILE) $(IVL_SRC_NET)
+	@echo "编译完成，生成文件：$(VVP_FILE)"
+	@echo "========== 执行四值仿真 =========="
+	vvp $(VVP_FLAGS) $(VVP_FILE)
+#	@echo "仿真完成，生成波形文件：$(VCD_FILE)"
+#	@echo "========== 打开波形文件 =========="
+#	gtkwave $(VCD_FILE) 
 clean:
 	rm -rf obj_dir
 	rm -rf $(VVP_FILE) $(VCD_FILE) *.vcd *.vvp *.log 
