--- a/npc/Makefile
+++ b/npc/Makefile
@@ -66,11 +66,11 @@ sim-iverilog:
 # 	gtkwave $(VCD_FILE) 
 sim-iverilog-netlist:
 	@$(OBJCOPY) -I binary -O verilog --adjust-vma=$(LOAD_ADDR) $(IMG) $(IMG_HEX)
-	@echo "========== 编译Verilog文件（启用四值仿真）=========="
+	@echo "========== 编译Verilog文件（启用网表仿真）=========="
 	@echo $(IVL_SRC_NET)
 	iverilog $(IVL_FLAGS) -s $(IVL_TOP_MODULE) -o $(VVP_FILE) $(IVL_SRC_NET)
 	@echo "编译完成，生成文件：$(VVP_FILE)"
-	@echo "========== 执行四值仿真 =========="
+	@echo "========== 执行网表仿真 =========="
 	vvp $(VVP_FLAGS) $(VVP_FILE)
 #	@echo "仿真完成，生成波形文件：$(VCD_FILE)"
 #	@echo "========== 打开波形文件 =========="
